--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
         "crypto": "^1.0.1",
         "express": "^4.17.1",
         "image-thumbnail": "^1.0.16",
+        "jest": "^29.7.0",
         "mime-types": "^2.1.27",
         "mongodb": "^3.5.9",
+        "mongodb-memory-server": "^10.0.0",
         "redis": "^2.8.0",
         "sha1": "^1.1.1",
+        "supertest": "^7.0.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
